Added Set-Cookie header to nginx example config

--- a/nginx/auth.example.com.conf
+++ b/nginx/auth.example.com.conf
@@ -5,6 +5,8 @@ server {
 
 	location / {
 		auth_request /_auth;
+		auth_request_set $saved_set_cookie $upstream_http_set_cookie;
+		add_header Set-Cookie $saved_set_cookie;
 		try_files $uri $uri/ =404;
 	}
 
